--- a/scss/modules/_footer.scss
+++ b/scss/modules/_footer.scss
@@ -13,8 +13,9 @@ footer {
         justify-content: space-between;
         flex-direction: column;
         .footer-logo {
+         width: auto;
                img {
-                  width: auto;
+                  width: 100%;
                   vertical-align: middle;
                   border: 0;
                }
@@ -22,6 +23,7 @@ footer {
         .footer-company-info {
             display: flex;
             justify-content: space-between;
+            width: 100%;
             h4 {
                margin-top: 24px;
             }
@@ -64,7 +66,6 @@ footer {
       }
    }
 }   
-
     .footer-menu-list {
       padding-left: 0;
     }
