--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -6,7 +6,7 @@ header {
     img{
         padding: 0;
         box-sizing: border-box;
-        width: 65%;
+        width: 100%;
         display: block;
         flex-shrink: 3;
         align-self: center;
@@ -17,6 +17,7 @@ header {
 .row {
     display: flex;
     flex-direction: row;
+    width: 100%;
     justify-content: space-between;
     padding-bottom: 20px;
 }
@@ -69,6 +70,7 @@ header {
     border: 2px solid rgba(0, 0, 0, .1);
     border-radius: 2px;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    padding-right: 40px;
 }
 
 .icon-search-small {
@@ -100,6 +102,8 @@ header {
     height: 56px;
     margin: 0;
     outline: none;
+    padding: 5px 15px;
+    border-color: #ccc;
 }
 .large-form-icon-container {
     align-self: center;
@@ -129,6 +133,12 @@ header {
 
 
 // Media Queries 
+.row {
+    @media (max-width:766px) {
+        padding-bottom: 0;
+    }
+}
+
 .form-container, .header-phone-icon {
     @media (min-width:766px) {
         display: none;
@@ -144,7 +154,7 @@ header {
 header {
     img {
         @media (min-width:766px) {
-            width: 50%;
+            //width: 50%;
         }
         @media (min-width: 992px) {
             width: fit-content;
@@ -152,6 +162,12 @@ header {
     }
 }
 
+.header-form-large {
+    @media (min-width: 767px) {
+        width: 174px;
+        border-radius: 0;
+    }
+}
 .header-form-large {
     @media (min-width: 992px) {
         display: none;
